--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Kin Gin</title>
-        <style>
-            <body
+<html lang="pt-br">
+  <head>
+    <title>Style feet</title>
+    <meta charset="utf-8">
+  </head>
 
+  <body>
+   <h1>Style Feet</h1>
+   
+  </body>
 
-
-        </style>
-    </head>
-
-        
+</html>
