--- a/index.html
+++ b/index.html
@@ -7,12 +7,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Style feet</title>
 </head>
+
 <body>
-  <div><h1>Style Feet</h1></div> 
+
+  <div class="barra-superior">
+    Original dede 1988 Style Feet
+  </div>
+
+  <header class="head">
+    <div class="title-site">
+      <h1 class="title-site-description"><img src="Typography Initial Letter Brand Logo (1).png" height="100" width="100"></body>
+    </div>
+    <nav class="navigation-principal">
+      <ul class="navigation-principal-list">
+        <li class="navigation-principal-list-item">
+          <a class="navigation-principal-list-item-link" href="#">Menu</a>
+        </li>
+        <li class="navigation-principal-list-item">
+          <a class="navigation-principal-list-item-link" href="#">Sobre nos</a>
+        </li>
+        <li class="navigation-principal-list-item">
+        </li>
+        <li class="navigation-principal-list-item">
+          <a class="navigation-principal-list-item-link" href="#">Contato</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="barra-inferior">
+  CADASTRE SEU CPF+ FRETE GRATIS
+  </div>
+
+
+  </div>
 
   <div id="container">
     <div class="a"></div>
     <div class="a"></div>
   </div>
+
+  <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>About Us</title>
+  <link rel="stylesheet" type="text/css" href="css/style3.css">
+  <link rel="shortcut icon" href="images/logo.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+</head>
+
+    
 </body>
+
+
 </html>
